--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,10 +1,5 @@
-<!doctype html>
-<html>
-<head>
-		<meta charset="UTF-8">
-		<title>Freeder</title>
-    </head>
-    <body>
-        <p>OK</p>
-    </body>
-</html>
+{include="_begin"}
+
+<p>OK !</p>
+
+{include="_end"}
