Big update with many improvements
* Move template to `default` to have possibility to manage a lot of them
* Add some basic functions
* Got a basic interface to display what is in the db

--- a/tpl/default/_footer.html
+++ b/tpl/default/_footer.html
@@ -2,4 +2,5 @@
 {* Call it inside <body>. *}
 <footer>
 	<p>Follow us on <a href="https://github.com/Phyks/Freeder">GitHub</a> !</p>
+    <p>This page was generated in {function="get_generation_time($start_generation_time)"}.</p>
 </footer>
