--- a/tpl/default/_header.html
+++ b/tpl/default/_header.html
@@ -1,5 +1,5 @@
 {* Page header (contains banner, menus, etc). *}
 {* Call it inside <body>                      *}
 <header>
-	<h1>Freeder</h1>
+    <h1><a href="index.php">Freeder</a></h1>
 </header>
