Simplify config class

--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -5,11 +5,11 @@
         <fieldset>
             <legend>Synchronization</legend>
             <p>
-                <input type="radio" name="synchronization_type" value="ajax" {if="$config->get('synchronization_type') == 'ajax'"} checked="checked"{/if}/><label>Ajax</label><br/>
+                <input type="radio" name="synchronization_type" value="ajax" {if="$config->synchronization_type == 'ajax'"} checked="checked"{/if}/><label>Ajax</label><br/>
                 Update the feeds in the background at each page call.
             </p>
             <p>
-                <input type="radio" name="synchronization_type" value="cron" {if="$config->get('synchronization_type') == 'cron'"} checked="checked"{/if}/><label>Cron</label><br/>
+                <input type="radio" name="synchronization_type" value="cron" {if="$config->synchronization_type == 'cron'"} checked="checked"{/if}/><label>Cron</label><br/>
                 Use a crontask to update the feeds regularly.
             </p>
         </fieldset>
@@ -30,10 +30,10 @@
         <fieldset>
             <legend>Misc</legend>
 
-            <p><label for="timezone">Timezone : </label><input type="text" name="timezone" id="timezone" value="{$config->get('timezone')}"/></p>
+            <p><label for="timezone">Timezone : </label><input type="text" name="timezone" id="timezone" value="{$config->timezone}"/></p>
             <p>Tag entries from the tags in the feeds ?
-            <input type="radio" name="use_tags_from_feeds" id="use_tags_from_feeds_yes" value="1" {if="$config->get('use_tags_from_feeds') != 0"}checked="checked"{/if}/><label for=use_tags_from_feeds_yes">Yes</label>
-                <input type="radio" name="use_tags_from_feeds" id="use_tags_from_feeds_no" value="0" {if="$config->get('use_tags_from_feeds') == 0"}checked="checked"{/if}/><label for=use_tags_from_feeds_no">No</label>
+            <input type="radio" name="use_tags_from_feeds" id="use_tags_from_feeds_yes" value="1" {if="$config->use_tags_from_feeds != 0"}checked="checked"{/if}/><label for=use_tags_from_feeds_yes">Yes</label>
+                <input type="radio" name="use_tags_from_feeds" id="use_tags_from_feeds_no" value="0" {if="$config->use_tags_from_feeds == 0"}checked="checked"{/if}/><label for=use_tags_from_feeds_no">No</label>
                 </p>
         </fieldset>
 
