Anonymous users should not have access to settings and refresh page.

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -1,7 +1,7 @@
 {include="_begin"}
 
 <main>
-<p><a href="?do=update">Update !</a></p>
+<p><a href="?do=refresh">Update !</a></p>
 <p><a href="?do=settings">Settings</a></p>
 {if="$user !== false"}
     <p><a href="?do=logout">Logout</a></p>
