base for the theme

--- a/tpl/default/_include.html
+++ b/tpl/default/_include.html
@@ -1,2 +1,7 @@
 {* Usual header includes (e.g. stylesheet) *}
+
 <link rel="stylesheet" src="inc/default.css" />
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/typo.css">
+<link rel="stylesheet" href="css/colors.css"
