--- a/tpl/default/_include_end.html
+++ b/tpl/default/_include_end.html
@@ -1,4 +1,5 @@
 {* Inclusion at end of document. Use it to include JavaScript files for *}
-{* example.															 *}
 
+<script src="js/jquery-2.1.1.min.js">
+<script src="js/script.js">
 
