Add `<main>` to `_begin` and `_end`
It's better than add it manually in each template file.
This is better to place `<main>` in `_begin` because this file has been designed for common pages and **every** common pages whould put its content inside <main>. Otherwise that is not a common page.

--- a/tpl/default/_end.html
+++ b/tpl/default/_end.html
@@ -1,5 +1,6 @@
 {* End of common pages.						*}
 {* It must be the last thing in your template. *}
+		</main>
 		{include="_footer"}
 	</body>
 </html>
