Remove `?do` and so modularize index.php

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -6,9 +6,9 @@
 	</header>
 	<ul id="menu">
 		<li><a href="index.php">Home</a></li>
-		<li><a href="?do=refresh">Update !</a></li>
-		<li><a href="?do=settings">Settings</a></li>
-		<li><a href="?do=logout">Logout</a></li>
+		<li><a href="refresh.php">Refresh!</a></li>
+		<li><a href="settings.php">Settings</a></li>
+		<li><a href="logout.php">Logout</a></li>
 	</ul>
 	<ul id="feedList">
 		
