--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -1,7 +1,7 @@
 {include="_begin"}
 
 {if="$user == false"}
-	<p><a href="?do=login">Log in</a></p>
+	<p><a href="login.php">Log in</a></p>
 {else}
 	
 	{loop="$entries"}
