--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -82,8 +82,8 @@
 					<td>{$value['title']}</td>
 					<td>{$value['url']}</td>
 					<td>Edit</td>
-					<td><a href="?do=settings&amp;delete_feed={$value['id']}">Delete</a></td>
-					<td><a href="?do=settings&amp;refresh_feed={$value['id']}">Refresh</a></td>
+					<td><a href="settings.php?delete_feed={$value['id']}">Delete</a></td>
+					<td><a href="settings.php?refresh_feed={$value['id']}">Refresh</a></td>
 				</tr>
 			{/loop}
 		</table>
