first import of the template : base styles and colors

--- a/tpl/default/_footer.html
+++ b/tpl/default/_footer.html
@@ -1,5 +1,6 @@
 {* Footer.				*}
-{* Call it inside <body>. *}
+
+</div> <!--end#flex-->
 <footer>
 	<p>Follow us on <a href="https://github.com/Phyks/Freeder">GitHub</a> !</p>
 	<p>This page was generated in {function="get_generation_time($start_generation_time)"}.</p>
