--- a/tpl/default/_include.html
+++ b/tpl/default/_include.html
@@ -1,7 +1,10 @@
 {* Usual header includes (e.g. stylesheet) *}
 
-<link rel="stylesheet" src="inc/default.css" />
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/layout.css">
-<link rel="stylesheet" href="css/typo.css">
-<link rel="stylesheet" href="css/colors.css"
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css" />
+<link rel="stylesheet" href="css/ui.css">
+<link rel="stylesheet" href="css/sidebar.css">
+<link rel="stylesheet" href="css/articles.css">
+<link rel="stylesheet" href="css/articles_content.css">
+<link rel="stylesheet" href="css/footer.css">
+<link rel="stylesheet" href="css/settings.css">
