add comment on how the login page works :D

--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -1,3 +1,5 @@
+{* When the user is not logged, this page is loaded instead of the common index.html. *}
+
 {include="_begin"}
 <form method="post" action="">
 	<p>
