Add display type setting (not functional)

--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -28,6 +28,12 @@
 					{/loop}
 				</select>
 			</p>
+			<p>
+				Display entries: <br/>
+				<input type="radio" name="display_entries" id="display_entries_full" value="content"/><label for="display_entries_full">Full entry</label><br/>
+				<input type="radio" name="display_entries" id="display_entries_desc" value="description"/><label for="display_entries_desc">Only the description</label><br/>
+				<input type="radio" name="display_entries" id="display_entries_titles" value="titles"/><label for="display_entries_titles">Only titles</label>
+			</p>
 		</fieldset>
 
 		<fieldset>
