--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -30,9 +30,9 @@
 			</p>
 			<p>
 				Display entries: <br/>
-				<input type="radio" name="display_entries" id="display_entries_full" value="content"/><label for="display_entries_full">Full entry</label><br/>
-				<input type="radio" name="display_entries" id="display_entries_desc" value="description"/><label for="display_entries_desc">Only the description</label><br/>
-				<input type="radio" name="display_entries" id="display_entries_titles" value="titles"/><label for="display_entries_titles">Only titles</label>
+				<input type="radio" name="display_entries" id="display_entries_full" value="content" {if="$config->display_entries == 'content'"}checked="checked"{/if}/><label for="display_entries_full">Full entry</label><br/>
+				<input type="radio" name="display_entries" id="display_entries_desc" value="description" {if="$config->display_entries == 'description'"}checked="checked"{/if}/><label for="display_entries_desc">Only the description</label><br/>
+				<input type="radio" name="display_entries" id="display_entries_titles" value="title" {if="$config->display_entries == 'title'"}checked="checked"{/if}/><label for="display_entries_titles">Only titles</label>
 			</p>
 		</fieldset>
 
