better login. Note that the labels are hidden, because they are visualy replaced by the placeholders but cannot be replaced for accessibility measures.

--- a/tpl/default/_include.html
+++ b/tpl/default/_include.html
@@ -8,3 +8,4 @@
 <link rel="stylesheet" href="css/articles_content.css">
 <link rel="stylesheet" href="css/footer.css">
 <link rel="stylesheet" href="css/settings.css">
+<link rel="stylesheet" href="css/login.css">
