--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -1,13 +1,15 @@
 {* When the user is not logged, this page is loaded instead of the common index.html. *}
 
 {include="_begin"}
-<form method="post" action="">
-	<p>
-		<label for="login">Login: </label><input type="text" name="login" id="login" />
-	</p>
-	<p>
-		<label for="password">Password: </label><input type="password" name="password" id="password" />
-	</p>
+<form method="post" action="" id="login">
+	<div>
+		<input type="text" name="login" id="login" placeholder="Login"/>
+		<label for="login">Login</label>
+	</div>
+	<div>
+		<input type="password" name="password" id="password" placeholder="Password" />
+		<label for="password">Password</label>
+	</div>
 	<p><input type="submit"/></p>
 </form>
 {include="_end"}
