Add default value for number of entries to keep on settings page

--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -51,7 +51,7 @@
 
             <p>
                 <label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
-                <input type="number" name="entries_to_keep" id="entries_to_keep"/>
+				<input type="number" name="entries_to_keep" id="entries_to_keep" value="{$config->entries_to_keep}"/>
             </p>
         </fieldset>
 
