better form and buttons

--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -10,6 +10,6 @@
 		<input type="password" name="password" id="password" placeholder="Password" />
 		<label for="password">Password</label>
 	</div>
-	<p><input type="submit"/></p>
+	<input class="red" type="submit"/>
 </form>
 {include="_end"}
