--- a/tpl/default/settings.html
+++ b/tpl/default/settings.html
@@ -41,19 +41,19 @@
 			{* TODO *}
 		</fieldset>
 
-        <fieldset>
-            <legend>Entries</legend>
+		<fieldset>
+			<legend>Entries</legend>
 
 			<p>Tag entries from the tags in the feeds?
 				<input type="radio" name="use_tags_from_feeds" id="use_tags_from_feeds_yes" value="1" {if="$config->use_tags_from_feeds != 0"}checked="checked"{/if}/><label for=use_tags_from_feeds_yes">Yes</label>
 				<input type="radio" name="use_tags_from_feeds" id="use_tags_from_feeds_no" value="0" {if="$config->use_tags_from_feeds == 0"}checked="checked"{/if}/><label for=use_tags_from_feeds_no">No</label>
 			</p>
 
-            <p>
-                <label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
+			<p>
+				<label for="entries_to_keep">Number of entries to keep per feed (0 to keep all entries):</label>
 				<input type="number" name="entries_to_keep" id="entries_to_keep" value="{$config->entries_to_keep}"/>
-            </p>
-        </fieldset>
+			</p>
+		</fieldset>
 
 		<fieldset>
 			<legend>Misc</legend>
@@ -112,9 +112,9 @@
 	<form method="post" action="">
 		<p>
 			<label for="export">Export selected feeds (ctrl+click to select multiple):</label><br/>
-			<select name="export" id="export" multiple>
+			<select name="export[]" id="export" multiple>
 				{loop="$feeds"}
-					<option value="{$value['url']}">{$value['title']}</option>
+					<option value="{$value['id']}">{$value['title']}</option>
 				{/loop}
 			</select>
 		</p>
