Add pictures + small svg fallback js library (1ko)

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -2,7 +2,7 @@
 
 <aside>
 	<header>
-		<h1><a href="index.php">Freeder</a></h1>
+		<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
 	</header>
 	<ul id="menu">
 		<li><a href="index.php">Home</a></li>
