--- a/tpl/default/_include_end.html
+++ b/tpl/default/_include_end.html
@@ -2,4 +2,5 @@
 {* example.                                                             *}
 
 <script src="js/jquery-2.1.1.min.js"></script>
+<script src="js/svgeezy.min.js"></script>
 <script src="js/script.js"></script>
