--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -4,7 +4,9 @@
 
 
 <form method="post" action="" id="loginform">
-	<h1>Connection</h1>
+	<header>
+		<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
+	</header>
 	<div>
 		<input type="text" name="login" id="login" placeholder="Login"/>
 		<label for="login" class="hidden" >Login</label>
