first base for the tags (without css), and clean a double file

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -10,8 +10,8 @@
 		<li><a href="settings.php">Settings</a></li>
 		<li><a href="logout.php">Logout</a></li>
 	</ul>
-	<ul id="feedList">
-		
+	<ul id="tagList">
+		<li><a href="#">onetag</a><span><img alt="delete this tag" src="img/cross.svg"></span></li>
 	</ul>
 </aside>
 
