base for the tags (again) and subtle modification of the header

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -11,7 +11,12 @@
 		<li><a href="logout.php">Logout</a></li>
 	</ul>
 	<ul id="tagList">
-		<li><a href="#">onetag</a><span><img alt="delete this tag" src="img/cross.svg"></span></li>
+		<li>
+			<div class="tag">
+				<a class="tagLink" href="#">onetag (2)</a>
+				<a class="tagDel" href="#"><img alt="delete this tag" src="img/cross.svg"></a>
+			</div>
+		</li>
 	</ul>
 </aside>
 
