Move </div#flex> from _footer to _end
It is open in _begin, so it has to be closed in _end.
Thus we can remove the inclusion of _footer without breaking anything in the layout.

--- a/tpl/default/_end.html
+++ b/tpl/default/_end.html
@@ -1,7 +1,8 @@
 {* End of common pages.						*}
 {* It must be the last thing in your template. *}
 
-		</main>
+			</main>
+		</div> {* end #flex *}
 		{include="_footer"}
 		{include="_include_end"}
 	</body>
