Put install template out of install.php
Not that the displayed install page comes from the default template although there are some others templates installed since no theme has been set.
(Remove a remaining "Phyks" in footer Freeder repo link)

--- a/tpl/default/_begin.html
+++ b/tpl/default/_begin.html
@@ -1,6 +1,6 @@
 {* Begining of common pages.						 *}
 {* There must be nothing before it in your template. *}
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
