--- a/tpl/default/_footer.html
+++ b/tpl/default/_footer.html
@@ -2,6 +2,6 @@
 
 </div> <!--end#flex-->
 <footer>
-	<p>Follow us on <a href="https://github.com/Phyks/Freeder">GitHub</a> !</p>
+	<p>Follow us on <a href="https://github.com/FreederTeam/Freeder">GitHub</a> !</p>
 	<p>This page was generated in {function="get_generation_time($start_generation_time)"}.</p>
 </footer>
