--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Freeder</title>
-		<link rel="stylesheet" href="css/base.css">
-		<link rel="stylesheet" href="css/layout.css" />
-		<link rel="stylesheet" href="css/ui.css">
-		<link rel="stylesheet" href="css/sidebar.css">
-		<link rel="stylesheet" href="css/articles.css">
-		<link rel="stylesheet" href="css/articles_content.css">
-		<link rel="stylesheet" href="css/footer.css">
-		<link rel="stylesheet" href="css/settings.css">
-		<link rel="stylesheet" href="css/login.css">
+		<link rel="stylesheet" href="tpl/default/css/base.css">
+		<link rel="stylesheet" href="tpl/default/css/layout.css" />
+		<link rel="stylesheet" href="tpl/default/css/ui.css">
+		<link rel="stylesheet" href="tpl/default/css/sidebar.css">
+		<link rel="stylesheet" href="tpl/default/css/articles.css">
+		<link rel="stylesheet" href="tpl/default/css/articles_content.css">
+		<link rel="stylesheet" href="tpl/default/css/footer.css">
+		<link rel="stylesheet" href="tpl/default/css/settings.css">
+		<link rel="stylesheet" href="tpl/default/css/login.css">
 	</head>
 	<body>
 		<div id="flex">
@@ -21,7 +21,7 @@
 				<form method="post" action="">
 					<p><label for="login">Login: </label><input type="text" name="login" id="login"/></p>
 					<p><label for="password">Password: </label><input type="password" name="password" id="password"/></p>
-					<p><label for="timezone">Timezone : </label><input type="text" name="timezone" id="timezone" value="'.$default_timezone.'"/></p>
+					<p><label for="timezone">Timezone : </label><input type="text" name="timezone" id="timezone" value="$default_timezone"/></p>
 
 					<p><input type="submit" value="Install !"/></p>
 				</form>
@@ -30,11 +30,10 @@
 		
 		<footer>
 			<p>Follow us on <a href="https://github.com/FreederTeam/Freeder">GitHub</a> !</p>
-			<p>This page was generated in {function="get_generation_time($start_generation_time)"}.</p>
 		</footer>
 
-		<script src="js/jquery-2.1.1.min.js"></script>
-		<script src="js/svgeezy.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="tpl/default/js/jquery-2.1.1.min.js"></script>
+		<script src="tpl/default/js/svgeezy.min.js"></script>
+		<script src="tpl/default/js/script.js"></script>
 	</body>
 </html>
