--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -16,14 +16,23 @@
 	<body>
 		<div id="flex">
 			<main>
-				<h1>Installation</h1>
-
-				<form method="post" action="">
-					<p><label for="login">Login: </label><input type="text" name="login" id="login"/></p>
-					<p><label for="password">Password: </label><input type="password" name="password" id="password"/></p>
-					<p><label for="timezone">Timezone : </label><input type="text" name="timezone" id="timezone" value="$default_timezone"/></p>
-
-					<p><input type="submit" value="Install !"/></p>
+				<form method="post" action="" id="loginform">
+					<header>
+						<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
+					</header>
+					<div>
+						<label for="login">Login:</label>
+						<input type="text" name="login" id="login" />
+					</div>
+					<div>
+						<label for="password">Password:</label>
+						<input type="password" name="password" id="password" />
+					</div>
+					<div>
+						<label for="timezone">Timezone:</label>
+						<input type="text" name="timezone" id="timezone" value="$default_timezone"/>
+					</div>
+					<input class="red" type="submit" value="Install !" />
 				</form>
 			</main>
 		</div>
