--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -20,9 +20,10 @@
 					<header>
 						<h1><a href="index.php"><img alt="Freeder" src="tpl/default/img/logo_complete.svg"></a></h1>
 					</header>
+					<p class="error">$error_msg</p>
 					<div>
 						<label for="login" class="hidden">Login:</label>
-						<input type="text" name="login" id="login" placeholder="Login" />
+						<input type="text" name="login" id="login" value="$login" placeholder="Login" />
 					</div>
 					<div>
 						<label for="password" class="hidden">Password:</label>
@@ -34,7 +35,7 @@
 					</div>
 					<div>
 						<label for="timezone" class="hidden">Timezone:</label>
-						<input type="text" name="timezone" id="timezone" value="$default_timezone" placeholder="Timezone" />
+						<input type="text" name="timezone" id="timezone" value="$timezone" placeholder="Timezone" />
 					</div>
 					<input class="red" type="submit" value="Install !" />
 				</form>
