Make it easy to change default theme
You just have to change the `$theme` variable at the top of `inc/install.php`
Add a THEME constant to config.php file, although I think we should think about a new way to manage data/config.php since there is only one useful entry in it.

--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -3,22 +3,22 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Freeder</title>
-		<link rel="stylesheet" href="tpl/default/css/base.css">
-		<link rel="stylesheet" href="tpl/default/css/layout.css" />
-		<link rel="stylesheet" href="tpl/default/css/ui.css">
-		<link rel="stylesheet" href="tpl/default/css/sidebar.css">
-		<link rel="stylesheet" href="tpl/default/css/articles.css">
-		<link rel="stylesheet" href="tpl/default/css/articles_content.css">
-		<link rel="stylesheet" href="tpl/default/css/footer.css">
-		<link rel="stylesheet" href="tpl/default/css/settings.css">
-		<link rel="stylesheet" href="tpl/default/css/login.css">
+		<link rel="stylesheet" href="tpl/$theme/css/base.css">
+		<link rel="stylesheet" href="tpl/$theme/css/layout.css" />
+		<link rel="stylesheet" href="tpl/$theme/css/ui.css">
+		<link rel="stylesheet" href="tpl/$theme/css/sidebar.css">
+		<link rel="stylesheet" href="tpl/$theme/css/articles.css">
+		<link rel="stylesheet" href="tpl/$theme/css/articles_content.css">
+		<link rel="stylesheet" href="tpl/$theme/css/footer.css">
+		<link rel="stylesheet" href="tpl/$theme/css/settings.css">
+		<link rel="stylesheet" href="tpl/$theme/css/login.css">
 	</head>
 	<body>
 		<div id="flex">
 			<main>
 				<form method="post" action="" id="loginform">
 					<header>
-						<h1><a href="index.php"><img alt="Freeder" src="tpl/default/img/logo_complete.svg"></a></h1>
+						<h1><a href="index.php"><img alt="Freeder" src="tpl/$theme/img/logo_complete.svg"></a></h1>
 					</header>
 					<p class="error">$error_msg</p>
 					<div>
@@ -46,8 +46,8 @@
 			<p>Follow us on <a href="https://github.com/FreederTeam/Freeder">GitHub</a> !</p>
 		</footer>
 
-		<script src="tpl/default/js/jquery-2.1.1.min.js"></script>
-		<script src="tpl/default/js/svgeezy.min.js"></script>
-		<script src="tpl/default/js/script.js"></script>
+		<script src="tpl/$theme/js/jquery-2.1.1.min.js"></script>
+		<script src="tpl/$theme/js/svgeezy.min.js"></script>
+		<script src="tpl/$theme/js/script.js"></script>
 	</body>
 </html>
