Display authors in theme
But there seems to be a problem with feed loading…

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -5,6 +5,7 @@
 				<button class="btn red read_button" onclick="ajax(this, 'mark_as_read.php?entry={$value['id']}')">Lu</button>
 			</nav>
 			<h1>{$value['title']}</h1>
+			<div class="articles-authors">{include="_author"}</div>
 			<div>{$value['displayed_content']}</div>
 		</article>
 	{/loop}
