Add feed list in aside
Without any style for now

--- a/tpl/default/_aside.html
+++ b/tpl/default/_aside.html
@@ -18,5 +18,10 @@
 			</div>
 		</li>
 	</ul>
+	<ul id="feedList">
+		{loop="$feeds"}
+		<li><a href="index.php?view=%24feed_{$value['id']}">{$value['title']}</a></li>
+		{/loop}
+	</ul>
 </aside>
 
