--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -1,12 +1,12 @@
 {include="_begin"}
 	{loop="$entries"}
 		<article>
-			<nav class="articles-button-bar">
+			<nav class="article-button-bar">
 				<button class="btn red read_button" onclick="ajax(this, 'mark_as_read.php?entry={$value['id']}')">Lu</button>
 			</nav>
 			<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
-			<div class="articles-authors">{include="_author"}</div>
-			<div>{$value['displayed_content']}</div>
+			<div class="article-authors">{include="_author"}</div>
+			<div class="article-content">{$value['displayed_content']}</div>
 		</article>
 	{/loop}
 {include="_end"}
