Restore installation page style
And correct the usual issue with `empty()`

--- a/tpl/default/install.html
+++ b/tpl/default/install.html
@@ -1,5 +1,8 @@
-{include="_begin"}
+{include="_begin_login"}
 	<form method="post" action="" id="loginform">
+		<header>
+			<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
+		</header>
 		<div>
 			<label for="login" class="hidden">Login:</label>
 			<input type="text" name="login" id="login" value="{$login}" placeholder="Login" />
