--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -1,12 +1,37 @@
 {include="_begin"}
 	{loop="$entries"}
 		<article>
-			<nav class="article-button-bar">
-				<button class="btn red read_button" onclick="ajax(this, 'mark_as_read.php?entry={$value['id']}')">Lu</button>
+			<nav class="articleControls">
+				<button class="green" onclick="">
+					<img src="img/share.svg" alt="Share this entry">
+					Share</button> 
+				<button class="darkgrey" onclick="">
+					<img src="img/stick.svg" alt="Stick this entry">
+					Stick</button>
+				<button class="red" onclick="ajax(this, 'mark_as_read.php?entry={$value['id']}')">
+					<img src="img/read.svg" alt="Read this entry">
+					Read</button>
+				<div class="articleTags">
+					<img class="articleDisplayTagButton" alt="display the tag list" src="img/tag.svg">
+					<div class="articleTagList">
+						<ul>
+							<li>tag 1</li>
+							<li>tag 2</li>
+							<li>tag 3</li>
+							<li>tag 4</li>
+						</ul>
+						<form>
+							<input type="text" name="newTag" id="newTag" placeholder="Tag…"/>
+							<button>Tagguer</button>
+						</form>
+					</div>
+				</div>
 			</nav>
-			<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
-			<div class="article-authors">{include="_author"}</div>
-			<div class="article-content">{$value['displayed_content']}</div>
+			<div class="articleContent">
+				<h1><a href="{function="get_entry_link($value)"}">{$value['title']}</a></h1>
+				<div class="article-authors">{include="_author"}</div>
+				<div>{$value['displayed_content']}</div>
+			</div>
 		</article>
 	{/loop}
 {include="_end"}
