Try to fix relative path issue at file inclusion
But I think I gonna abort that method soon, it seems not to work…

--- a/tpl/default/index.html
+++ b/tpl/default/index.html
@@ -8,7 +8,7 @@
 				<button class="darkgrey" onclick="">
 					<img src="img/stick.svg" alt="Stick this entry">
 					Stick</button>
-				<button class="red" onclick="ajax(this, 'mark_as_read.php?entry={$value['id']}')">
+				<button class="red" onclick="ajax(this, 'api/mark_as_read.php?entry={$value['id']}')">
 					<img src="img/read.svg" alt="Read this entry">
 					Read</button>
 				<div class="articleTags">
