Fix error when  does not exist

--- a/tpl/default/_footer.html
+++ b/tpl/default/_footer.html
@@ -3,5 +3,5 @@
 <footer>
 	<p>Follow us on <a href="https://github.com/FreederTeam/Freeder">GitHub</a> !</p>
 	<p>This page was generated in {function="get_generation_time($start_generation_time)"}.</p>
-	<p class="error"><strong>{$error['title']}</strong> {$error['content']}</p>
+	{if="!empty($error)"}<p class="error"><strong>{$error['title']}</strong> {$error['content']}</p>{/if}
 </footer>
