Fix form action issue
Please use `action="#"` to point on the same page instead of `action=""`

--- a/tpl/default/login.html
+++ b/tpl/default/login.html
@@ -3,7 +3,7 @@
 {include="_begin_login"}
 
 
-<form method="post" action="" id="loginform">
+<form method="post" action="#" id="loginform">
 	<header>
 		<h1><a href="index.php"><img alt="Freeder" src="img/logo_complete.svg"></a></h1>
 	</header>
